# StormByte-BuildMaster

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  helpers.cmake  init_vars.cmake  propagate_vars.cmake  update_toolchain.cmake  useful_functions.md
.github/workflows/: doc.yml  static.yml
cmake/: optimizations.cmake
component/: CMakeLists.txt  bundler.bat.in  bundler.sh.in  component_shared.cmake.in  component_shared_dependant.cmake.in  component_static.cmake.in  component_static_dependant.cmake.in  helpers.cmake  init_vars.cmake  propagate_vars.cmake  rename_static_library.cmake.in  update_toolchain.cmake
env/: helpers.cmake  init_vars.cmake  propagate_vars.cmake  runner_linux.sh.in  runner_windows.bat.in  update_toolchain.cmake
tools/: CMakeLists.txt  helpers.cmake  init_vars.cmake  propagate_vars.cmake  update_toolchain.cmake
tools/cmake/: build.cmake.in  configure.cmake.in  helpers.cmake  init_vars.cmake  install.cmake.in  propagate_vars.cmake  update_toolchain.cmake
tools/extra/: CMakeLists.txt  init_vars.cmake  propagate_vars.cmake
tools/extra/pkgconf/: CMakeLists.txt  init_vars.cmake  propagate_vars.cmake  update_toolchain.cmake
tools/git/: fetch.cmake.in  helpers.cmake  init_vars.cmake  patch.cmake.in  propagate_vars.cmake  reset.cmake.in  switch.cmake.in  update_toolchain.cmake
tools/meson/: compile.cmake.in  helpers.cmake  init_vars.cmake  install.cmake.in  propagate_vars.cmake  setup.cmake.in  update_toolchain.cmake
tools/ninja/: init_vars.cmake  propagate_vars.cmake  update_toolchain.cmake
tools/pkgconf/: init_vars.cmake
